<resources>
  <string name="app_name">pxandroid</string>
  <string name="login_logo_description">Logo do aplicativo</string>
  <string name="login_title">Login</string>
  <string name="login_email_label">E-mail</string>
  <string name="login_email_hint">Digite seu e-mail</string>
  <string name="login_password_label">Senha</string>
  <string name="login_password_hint">Digite sua senha</string>
  <string name="login_remember_me">Lembrar-me</string>
  <string name="login_button_text">Entrar com Google</string>
  <string name="default_web_client_id">
  724662622172-2itpg2m0m0m39fj51aqh133n5tsmvunv.apps.googleusercontent.com
</string>
</resources>