<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/login_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <ImageView
      android:id="@+id/imageLogo"
      android:layout_width="96dp"
      android:layout_height="96dp"
      android:src="@mipmap/ic_launcher"
      android:contentDescription="@string/login_logo_description"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent" />

    <TextView
      android:id="@+id/textTitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/login_title"
      android:textSize="24sp"
      app:layout_constraintTop_toBottomOf="@id/imageLogo"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginTop="16dp" />

    <TextView
      android:id="@+id/textEmailLabel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/login_email_label"
      android:labelFor="@id/editEmail"
      app:layout_constraintTop_toBottomOf="@id/textTitle"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_marginTop="16dp" />

    <EditText
      android:id="@+id/editEmail"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:inputType="textEmailAddress"
      android:hint="@string/login_email_hint"
      android:autofillHints="emailAddress"
      app:layout_constraintTop_toBottomOf="@id/textEmailLabel"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent" />

    <TextView
      android:id="@+id/textPasswordLabel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/login_password_label"
      android:labelFor="@id/editPassword"
      app:layout_constraintTop_toBottomOf="@id/editEmail"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_marginTop="16dp" />

    <EditText
      android:id="@+id/editPassword"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:inputType="textPassword"
      android:hint="@string/login_password_hint"
      android:autofillHints="password"
      app:layout_constraintTop_toBottomOf="@id/textPasswordLabel"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
      android:id="@+id/switchRemember"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/login_remember_me"
      app:layout_constraintTop_toBottomOf="@id/editPassword"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_marginTop="8dp" />

    <Button
      android:id="@+id/buttonLogin"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/login_button_text"
      app:layout_constraintTop_toBottomOf="@id/switchRemember"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginTop="16dp" />

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/recyclerItems"
      android:layout_width="0dp"
      android:layout_height="200dp"
      app:layout_constraintTop_toBottomOf="@id/buttonLogin"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginTop="16dp" />

  </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
